--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 
 
 
- </style>
+ <style>
+body {
+  margin:auto 0;
+  background:url("https://i.postimg.cc/JzwCsWwN/Dr-BR.jpg") no-repeat;
+  background-size:cover ;
+  background-position:center;
+  text-align:center;
+}
+ </style> 
   
 
 
