--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ $(function() {
      <tr> 
       <td>Date Of Birthday</td> 
       <td>:</td> 
-      <td>16 November 1999</td> 
+      <td>16 November 1994</td> 
      </tr> 
      <tr> 
       <td>Cast</td> 
@@ -269,9 +269,9 @@ $(function() {
      </tr> 
     
      <tr> 
-      <td>Age</td> 
+      <td>Sister1</td> 
       <td>:</td> 
-      <td>30</td> 
+      <td>Married</td> 
      </tr> 
      <tr> 
       <td>Mo.No</td> 
